# synth-template

./: CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: build-plugin.yml
cmake/: compile-options.cmake
libs/: CMakeLists.txt
resources/: NightlyBlurb.md  ReadmeZip.txt
scripts/: README.md  fix_code.py  fix_code.sh  fix_file_comments.pl  fix_file_comments.py  fix_header_guards.pl  fix_header_guards.py  fix_namespace.pl  fix_namespace.py
src/: configuration.h
src/clap/: plugin-clap-entry-impl.cpp  plugin-clap-entry-impl.h  plugin-clap-entry.cpp  plugin-clap.cpp
src/engine/: engine.cpp  engine.h  patch.cpp  patch.h  voice.cpp  voice.h
src/presets/: preset-manager.cpp  preset-manager.h
src/ui/: main-panel.cpp  main-panel.h  patch-data-bindings.h  plugin-editor.cpp  plugin-editor.h  preset-data-binding.h  ui-defaults.h
tests/: dsp_basics.cpp  test_main.cpp
